<resources>
    <string name="app_name">Basket Deliverer v1.1</string>
    <string name="title_home">Home</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <string name="ready_scan">Ready to scan...</string>
    <string name="count_delivered">Entregas</string>
    <string name="count_start">0</string>
    <string name="reset">Limpar</string>
    <string name="reset_sended">Limpar Enviados</string>
    <string name="resend">Reenviar</string>
    <string name="delivered">Entregue</string>
    <string name="occurrence">Ocorrência</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_settings">Settings</string>
    <string name="select_status">Informe o status da entrega</string>

    <string name="message_success">Cadastro realizado com sucesso</string>
    <string name="message_success_resend">Reenvio realizado com sucesso</string>

    <!-- preferences -->
    <string name="title_scheduled_deliveries">Entregas Previstas</string>
    <string name="pref_scheduled">scheduled</string>
    <string name="summary_scheduled">Definir total de entregas previstas</string>

    <string name="title_url">Server URL</string>
    <string name="pref_url">url</string>
    <string name="summary_url">Endereço do servidor</string>

    <!-- cards -->
    <string name="title_card_delivered">Item entregue</string>
    <string name="option_main">Endereço principal</string>
    <string name="option_alternative">Endereço alternativo</string>

    <string name="title_card_cause">Item ocorrência</string>
    <string name="option_absent">Ausente na data</string>
    <string name="option_changed_address">Mudou de endereço</string>
    <string name="option_incorrect_address">Endereço incorreto</string>

</resources>
