<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="@dimen/text_margin"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_status"
            android:layout_marginBottom="@dimen/text_margin"/>

        <ToggleButton
            android:id="@+id/tgDelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/delivered"
            android:textOff="@string/occurrence"
            android:checked="true"/>

    </LinearLayout>

    <include layout="@layout/cardview_delivered" />

    <include layout="@layout/cardview_not_delivered" />

</FrameLayout>