<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/card_margin_top">

    <android.support.v7.widget.CardView
        android:id="@+id/cardNotDelivered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/textScan"
            android:padding="@dimen/text_margin"
            android:text="@string/title_card_cause"
            android:textSize="20sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <RadioGroup
                android:id="@+id/rgNotDelivered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_absent"
                    android:layout_marginTop="80dp"
                    android:tag="4"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/rb5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_changed_address"
                    android:tag="5"
                    android:layout_marginTop="10dp"/>

                <RadioButton
                    android:id="@+id/rb6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_incorrect_address"
                    android:tag="6"
                    android:layout_marginTop="10dp"/>

            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="240dp">

                <Button
                    android:id="@+id/btnNotDeliveredCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_toLeftOf="@id/btnNotDeliveredOk"
                    android:layout_toStartOf="@id/btnNotDeliveredOk"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btnNotDeliveredOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    style="?android:attr/buttonBarButtonStyle" />

            </RelativeLayout>

        </FrameLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>