<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardDelivered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSuccess"
            android:textColor="@color/textScan"
            android:padding="@dimen/text_margin"
            android:text="@string/title_card_delivered"
            android:textSize="20sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <RadioGroup
                android:id="@+id/rgDelivered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_main"
                    android:layout_marginTop="80dp"
                    android:tag="2"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_alternative"
                    android:tag="3"
                    android:layout_marginTop="10dp"/>

            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="180dp">

                <Button
                    android:id="@+id/btnDeliveredCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_toLeftOf="@id/btnDeliveredOk"
                    android:layout_toStartOf="@id/btnDeliveredOk"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btnDeliveredOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/ok"
                    style="?android:attr/buttonBarButtonStyle" />

            </RelativeLayout>

        </FrameLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>